force-app/main/default/objects/CPQ_Integration_Log__c/CPQ_Integration_Log__c.object-meta.xml
<CustomObject>
    <description>Written by the CPQ_Log_Event__e trigger. Deliberately holds no lookups to the transaction it describes, so a log survives the rollback of the commit that produced it (design doc S7.2).</description>
    <label>CPQ Integration Log</label>
    <nameField>
        <label>Log</label>
        <displayFormat>LOG-{0000000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPQ Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>