force-app/main/default/objects/CPQ_Integration_Log__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>120</length>
    <type>Text</type>
</CustomField>