force-app/main/default/objects/CPQ_Integration_Log__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>By value, not by lookup, so the log does not depend on the record surviving.</description>
    <label>Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>